[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iconscript"
version = "0.1"
description = "Parser for iconscript language"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime~=4.13.2",
    "svgwrite~=1.4.3",
    "shapely~=2.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.12.4",
]

[project.urls]
Homepage = "https://github.com/enzet/iconscript"

[project.scripts]
iconscript = "iconscript.__main__:main"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "C901",  # Too complex functions are allowed.
    "COM812",  # Trailing comma not in Black style.
    "D105",  # Missing docstring in magic method is allowed.
    "D107",  # Missing docstring in `__init__` method is allowed.
    "D202",  # No blank line after function docstring is allowed.
    "D203",  # Blank line is not required before class docstring.
    "D213",  # New line after `"""` is not needed.
    "FIX002",  # Todo markers are allowed.
    "PLR0911",  # Too many return statements are allowed.
    "PLR0912",  # Too many branches are allowed.
    "PLR0913",  # Too many arguments are allowed.
    "PLR0915",  # Too many statements are allowed.
    "RUF001",  # Ambiguous symbols are allowed.
    "RUF002",  # Ambiguous symbols are allowed.
    "S101",  # Asserts are allowed in tests.
    "TD003",  # Issues for todos are not required.
]
line-length = 80
